# llvm-autojit

./: .gitignore  AutoJITConfig.h.in  CMakeLists.txt  LICENSE  README.md
.github/workflows/: check-llvm20.yml  check-llvm21.yml  ubuntu2204.yml
benchmark/: CMakeLists.txt
benchmark/ubuntu2204/: CMakeLists.txt  Dockerfile  FileCheck-autojit-build.sh  FileCheck-autojit-run.sh  FileCheck-autojit-setup.sh.in  FileCheck-regular-build.sh  FileCheck-regular-run.sh  FileCheck-regular-setup.sh.in  FileCheck-test.sh  FileCheck-test.sh.in  FileCheck.sh  bzip2-autojit-build.sh  bzip2-autojit-build.sh.in  bzip2-autojit-clean.sh  bzip2-autojit-run.sh  bzip2-autojit-setup.sh  bzip2-regular-build.sh  bzip2-regular-build.sh.in  bzip2-regular-clean.sh  bzip2-regular-run.sh  bzip2-regular-setup.sh  bzip2-test.md5  bzip2-test.sh  bzip2.sh  docker-build.sh  docker-samples-autojitd.sh  docker-samples-shlib.sh  docker-samples.sh  docker-tests.sh  hello-rs-test.sh.in  json-autojit-build.sh  json-autojit-run.sh  json-autojit-setup.sh.in  json-test.sh  meantime.py  run_all.sh  setup.sh  setup_bzip2.sh  setup_clang.sh  setup_llc.sh  (+1 more)
benchmark/ubuntu2204/llvm21/: Dockerfile
cmake/cache/: Ubunutu2204.cmake
docs/: develop.md
plugin/: AutoJITPass.cpp  CMakeLists.txt  TPDEBackends.cpp  TPDEBackends.h
runtime/: AutoJITCommon.cpp  AutoJITCommon.h  AutoJITDaemon.cpp  AutoJITDebug.c  AutoJITRuntime.cpp  AutoJITRuntime.h  AutoJITRuntimeSO.cpp  AutoJITRuntimeStub.c  AutoJITStub.c  CMakeLists.txt  exports.txt
runtime/core/: AutoJIT.cpp  AutoJIT.h  ExecutorPlatform.cpp  ExecutorPlatform.h
runtime/inprocess/: Shared.cpp
runtime/remote/: Daemon.cpp  Session.cpp  Session.h  Stub.c  Stub.h  StubDebug.c  StubSPS.c  StubSPS.h
test/: CMakeLists.txt  archives.cpp  cus.cpp  daemon.c  debug-plugin.cpp  debug-runtime.cpp  exceptions-libcxx.cpp  exceptions-libstdcxx.cpp  exceptions.cpp  extract.cpp  fnptr.cpp  gvs.cpp  libcxx.cpp  libstdcxx.cpp  link_once.ll  lit.cfg.py  lit.site.cfg.py.in  opt.ll  runtime.cpp  skip.cpp  threadlocal.c  tpde-cstdio.cpp  tpde-format.cpp  tpde-string.cpp  trampoline.ll
test/Inputs/: add.cpp  cus_string.cpp  cus_vector.cpp  hello.cpp  link_once1.ll  link_once2.ll  multiply.cpp
